# usb-bootable-creator

./: .gitignore  .python-version  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.wimlib  PKGBUILD  README.md  RESUMEN_WINDOWS_OPTIMIZATION.md  THIRD_PARTY_LICENSES.md  gui.py  main.py  majusb-bootable-creator.desktop  majusb-bootable-creator.flatpak.yml  progress.py  requirements.txt  utils.py  worker.py
.github/workflows/: release.yml  wimlib-bundle.yml
assets/: com.github.vicrodh.MajUSB.metainfo.xml  majusb-bootable-creator.desktop  majusb-flatpak.desktop
flows/: linux_flow.py  windows_flow.py
qml/: main.qml
scripts/: benchmark_windows.sh
src/: config.rs  error.rs  gui.rs  lib.rs  main.py  main.rs  progress.rs  utils.rs  worker.rs
src/flows/: linux_flow.rs  linux_persistence.rs  mod.rs  windows_flow.rs
src/gui/: app.rs  dialogs.rs  events.rs  mod.rs  utils.rs  widgets.rs
src/services/: mod.rs  os_client.rs
src/windows/: mod.rs  unattend.rs  wim.rs
