[package]
name = "rust-usb-bootable-creator"
version = "0.1.0"
edition = "2024"
authors = ["Vic RH <blitzkriegfc@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
tempfile = "3.10"
libc = "0.2"
serde_json = "1.0"
gtk4 = "0.9.6"
glib = "0.18"
which = "4.4"
gio = "0.20.11"

[lib]
name = "rust_usb_bootable_creator"
path = "src/lib.rs"

[package.metadata.deb]
assets = [
    ["target/release/rust-usb-bootable-creator", "usr/bin/rust-usb-bootable-creator", "755"],
    ["target/release/cli_helper", "usr/bin/cli_helper", "755"],
    ["assets/icons/icon-128x128.png", "usr/share/icons/hicolor/128x128/apps/majusb-bootable-creator.png", "644"],
    ["majusb-bootable-creator.desktop", "usr/share/applications/majusb-bootable-creator.desktop", "644"]
]
